@@ -3,6 +3,7 @@ serd (1.0.1) unstable;
   * Add SerdBuffer for mutable buffers to keep SerdChunk const-correct
   * Add SerdWorld for shared library state
   * Add option for writing terse output without newlines
+  * Add support for parsing variables
   * Add support for writing terse collections
   * Add support for xsd:float and xsd:double literals
   * Bring read/write interface closer to C standard
@@ -16,7 +17,7 @@ serd (1.0.1) unstable;
   * Use a fixed-size reader stack
   * Use char* for strings in public API
 
- -- David Robillard <d@drobilla.net>  Wed, 13 Jan 2021 13:29:44 +0000
+ -- David Robillard <d@drobilla.net>  Wed, 13 Jan 2021 13:37:55 +0000
 
 serd (0.30.11) unstable;
 
